# openg2p-iam-service

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-build.yml
docs/: staff-keycloak-login-flow.md  staff-portal-sso-login-flow.md
iam-agent-portal-api/: Dockerfile  README.md  pyproject.toml
iam-agent-portal-api/src/: main.py
iam-agent-portal-api/src/iam_agent_portal_api/: app.py  config.py
iam-bene-portal-api/: Dockerfile  README.md  pyproject.toml
iam-bene-portal-api/src/: main.py
iam-bene-portal-api/src/iam_bene_portal_api/: app.py  config.py
iam-core/: README.md  pyproject.toml
iam-core/src/iam_core/: context.py
iam-core/tests/: test_auth_adapters.py  test_authlib_migration.py  test_permission_helper.py  test_resource_access.py
iam-staff-portal-api/: .env.example  Dockerfile  README.md  pyproject.toml
iam-staff-portal-api/src/iam_staff_portal_api/: app.py  cache.py  config.py  main.py  schemas.py
openg2p-iam-agent-api/: main.py  pyproject.toml
openg2p-iam-agent-api/src/: main.py
openg2p-iam-agent-api/src/openg2p_iam_agent_api/: config.py
openg2p-iam-agent-api/src/openg2p_iam_agent_api/controllers/: auth_controller.py
openg2p-iam-bene-api/: main.py  pyproject.toml
openg2p-iam-bene-api/src/openg2p_iam_bene_api/: config.py
openg2p-iam-core/: pyproject.toml
openg2p-iam-core/src/openg2p_iam_core/: context.py
openg2p-iam-staff-api/: main.py  pyproject.toml
openg2p-iam-staff-api/src/: main.py
src/openg2p_portal_server/: app.py  config.py  context.py  dependencies.py
(+127 files in other folders)
